remove commented code